<resources>
    <string name="app_name">Calendar</string>
    <string name="title_activity_settings">Settings</string>

    <string name="mo">mo</string>
    <string name="tu">tu</string>
    <string name="we">we</string>
    <string name="th">th</string>
    <string name="fr">fr</string>
    <string name="sa">sa</string>
    <string name="su">su</string>

    <string name="year">Year</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading…</string>

    <string name="incorrect_year">Incorrect year</string>

    <string name="add">Add</string>
</resources>