<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Background"
    android:alpha="20">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/date"
            android:layout_centerVertical="true"
            android:alpha="0.5"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:alpha="0.5"
            android:src="@mipmap/settings"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:weightSum="7"
        tools:ignore="TextSizeCheck">

        <TextView
            style="@style/Day"
            android:text="@string/mo"
            tools:ignore="TextContrastCheck" />

        <TextView
            style="@style/Day"
            android:text="@string/tu"
            tools:ignore="TextContrastCheck" />

        <TextView
            style="@style/Day"
            android:text="@string/we"
            tools:ignore="TextContrastCheck" />

        <TextView
            style="@style/Day"
            android:text="@string/th"
            tools:ignore="TextContrastCheck" />

        <TextView
            style="@style/Day"
            android:text="@string/fr"
            tools:ignore="TextContrastCheck" />

        <TextView
            style="@style/Day"
            android:text="@string/sa"
            tools:ignore="TextContrastCheck" />

        <TextView
            style="@style/Day"
            android:text="@string/su"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        style="@style/Border"
        android:layout_marginTop="5dp">

        <include layout="@layout/row1" />

        <include layout="@layout/row2" />

        <include layout="@layout/row3" />

        <include layout="@layout/row4" />

        <include layout="@layout/row5" />

        <include layout="@layout/row6" />

    </LinearLayout>
</LinearLayout>
